StqlGrammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from StqlGrammar.y
-----------------------------------------------------------------------------

state 45 contains 2 shift/reduce conflicts.
state 47 contains 2 shift/reduce conflicts.
state 60 contains 2 shift/reduce conflicts.
state 61 contains 2 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseCalc -> Exp                            (0)
	Exp -> int                                         (1)
	Exp -> string                                      (2)
	Exp -> var                                         (3)
	Exp -> '[' Exp ']'                                 (4)
	Exp -> Str '|' Str                                 (5)
	Exp -> Exp '++' Exp                                (6)
	Exp -> Str 'SA++FE' Str                            (7)
	Exp -> Exp PlusVar Exp                             (8)
	Exp -> Exp '+' Exp                                 (9)
	Exp -> Let '(' var ':' Type ')' '=' Exp            (10)
	Exp -> Clear '(' var ':' Type ')'                  (11)
	Exp -> ClearAll                                    (12)
	Exp -> '(' Exp ')'                                 (13)
	Exp -> Exp ';' Exp                                 (14)
	Exp -> Exp ';'                                     (15)
	Exp -> Print Exp                                   (16)
	Exp -> ReadFile string                             (17)
	Exp -> GetVars var                                 (18)
	Exp -> ReadEnv                                     (19)
	Exp -> Format Exp                                  (20)
	Exp -> FillBasePrefixReady var                     (21)
	Exp -> ProcSemicComma var                          (22)
	Exp -> Delimit string Exp In var                   (23)
	Exp -> Compare string var In string var            (24)
	Exp -> LiteralsNum var                             (25)
	Str -> Str 'SA++FE' Str                            (26)
	Str -> Str '|' Str                                 (27)
	Str -> string                                      (28)
	Type -> Int                                        (29)
	Type -> String                                     (30)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	Int            { TokenTypeInt _ }
	String         { TokenTypeString _ }
	int            { TokenInt _ $$ }
	string         { TokenString _ $$ }
	'++'           { TokenPlusString _ }
	'SA++FE'       { TokenSafePlusString _ }
	PlusVar        { TokenPlusVar _ }
	'+'            { TokenPlus _ }
	var            { TokenVar _ $$ }
	Let            { TokenLet _ }
	Print          { TokenPrint _ }
	Clear          { TokenClear _ }
	ClearAll       { TokenClearAll _ }
	':'            { TokenHasType _ }
	'='            { TokenEq _ }
	'('            { TokenLParen _ }
	')'            { TokenRParen _ }
	'['            { TokenLList _ }
	']'            { TokenRList _ }
	'|'            { TokenListSeg _ }
	';'            { TokenEnd _ }
	ReadFile       { TokenReadFile _ }
	GetVars        { TokenGetVar _ }
	ReadEnv        { TokenReadEnv _ }
	Format         { TokenFormat _ }
	FillBasePrefixReady{ TokenFillBasePrefixReady _ }
	ProcSemicComma { TokenProcSemicComma _ }
	Delimit        { TokenDelimit _ }
	Compare        { TokenCompare _ }
	In             { TokenIn _ }
	LiteralsNum    { TokenLiteralsNum _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseCalc rule  0
	Exp             rules 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25
	Str             rules 26, 27, 28
	Type            rules 29, 30

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseCalc -> . Exp                           (rule 0)

	int            shift, and enter state 2
	string         shift, and enter state 5
	var            shift, and enter state 6
	Let            shift, and enter state 7
	Print          shift, and enter state 8
	Clear          shift, and enter state 9
	ClearAll       shift, and enter state 10
	'('            shift, and enter state 11
	'['            shift, and enter state 12
	ReadFile       shift, and enter state 13
	GetVars        shift, and enter state 14
	ReadEnv        shift, and enter state 15
	Format         shift, and enter state 16
	FillBasePrefixReadyshift, and enter state 17
	ProcSemicComma shift, and enter state 18
	Delimit        shift, and enter state 19
	Compare        shift, and enter state 20
	LiteralsNum    shift, and enter state 21

	Exp            goto state 3
	Str            goto state 4

State 1

	Exp -> . int                                        (rule 1)

	int            shift, and enter state 2


State 2

	Exp -> int .                                        (rule 1)

	'++'           reduce using rule 1
	PlusVar        reduce using rule 1
	'+'            reduce using rule 1
	')'            reduce using rule 1
	']'            reduce using rule 1
	';'            reduce using rule 1
	In             reduce using rule 1
	%eof           reduce using rule 1


State 3

	%start_parseCalc -> Exp .                           (rule 0)
	Exp -> Exp . '++' Exp                               (rule 6)
	Exp -> Exp . PlusVar Exp                            (rule 8)
	Exp -> Exp . '+' Exp                                (rule 9)
	Exp -> Exp . ';' Exp                                (rule 14)
	Exp -> Exp . ';'                                    (rule 15)

	'++'           shift, and enter state 37
	PlusVar        shift, and enter state 38
	'+'            shift, and enter state 39
	';'            shift, and enter state 40
	%eof           accept


State 4

	Exp -> Str . '|' Str                                (rule 5)
	Exp -> Str . 'SA++FE' Str                           (rule 7)
	Str -> Str . 'SA++FE' Str                           (rule 26)
	Str -> Str . '|' Str                                (rule 27)

	'SA++FE'       shift, and enter state 35
	'|'            shift, and enter state 36


State 5

	Exp -> string .                                     (rule 2)
	Str -> string .                                     (rule 28)

	'++'           reduce using rule 2
	'SA++FE'       reduce using rule 28
	PlusVar        reduce using rule 2
	'+'            reduce using rule 2
	')'            reduce using rule 2
	']'            reduce using rule 2
	'|'            reduce using rule 28
	';'            reduce using rule 2
	In             reduce using rule 2
	%eof           reduce using rule 2


State 6

	Exp -> var .                                        (rule 3)

	'++'           reduce using rule 3
	PlusVar        reduce using rule 3
	'+'            reduce using rule 3
	')'            reduce using rule 3
	']'            reduce using rule 3
	';'            reduce using rule 3
	In             reduce using rule 3
	%eof           reduce using rule 3


State 7

	Exp -> Let . '(' var ':' Type ')' '=' Exp           (rule 10)

	'('            shift, and enter state 34


State 8

	Exp -> Print . Exp                                  (rule 16)

	int            shift, and enter state 2
	string         shift, and enter state 5
	var            shift, and enter state 6
	Let            shift, and enter state 7
	Print          shift, and enter state 8
	Clear          shift, and enter state 9
	ClearAll       shift, and enter state 10
	'('            shift, and enter state 11
	'['            shift, and enter state 12
	ReadFile       shift, and enter state 13
	GetVars        shift, and enter state 14
	ReadEnv        shift, and enter state 15
	Format         shift, and enter state 16
	FillBasePrefixReadyshift, and enter state 17
	ProcSemicComma shift, and enter state 18
	Delimit        shift, and enter state 19
	Compare        shift, and enter state 20
	LiteralsNum    shift, and enter state 21

	Exp            goto state 33
	Str            goto state 4

State 9

	Exp -> Clear . '(' var ':' Type ')'                 (rule 11)

	'('            shift, and enter state 32


State 10

	Exp -> ClearAll .                                   (rule 12)

	'++'           reduce using rule 12
	PlusVar        reduce using rule 12
	'+'            reduce using rule 12
	')'            reduce using rule 12
	']'            reduce using rule 12
	';'            reduce using rule 12
	In             reduce using rule 12
	%eof           reduce using rule 12


State 11

	Exp -> '(' . Exp ')'                                (rule 13)

	int            shift, and enter state 2
	string         shift, and enter state 5
	var            shift, and enter state 6
	Let            shift, and enter state 7
	Print          shift, and enter state 8
	Clear          shift, and enter state 9
	ClearAll       shift, and enter state 10
	'('            shift, and enter state 11
	'['            shift, and enter state 12
	ReadFile       shift, and enter state 13
	GetVars        shift, and enter state 14
	ReadEnv        shift, and enter state 15
	Format         shift, and enter state 16
	FillBasePrefixReadyshift, and enter state 17
	ProcSemicComma shift, and enter state 18
	Delimit        shift, and enter state 19
	Compare        shift, and enter state 20
	LiteralsNum    shift, and enter state 21

	Exp            goto state 31
	Str            goto state 4

State 12

	Exp -> '[' . Exp ']'                                (rule 4)

	int            shift, and enter state 2
	string         shift, and enter state 5
	var            shift, and enter state 6
	Let            shift, and enter state 7
	Print          shift, and enter state 8
	Clear          shift, and enter state 9
	ClearAll       shift, and enter state 10
	'('            shift, and enter state 11
	'['            shift, and enter state 12
	ReadFile       shift, and enter state 13
	GetVars        shift, and enter state 14
	ReadEnv        shift, and enter state 15
	Format         shift, and enter state 16
	FillBasePrefixReadyshift, and enter state 17
	ProcSemicComma shift, and enter state 18
	Delimit        shift, and enter state 19
	Compare        shift, and enter state 20
	LiteralsNum    shift, and enter state 21

	Exp            goto state 30
	Str            goto state 4

State 13

	Exp -> ReadFile . string                            (rule 17)

	string         shift, and enter state 29


State 14

	Exp -> GetVars . var                                (rule 18)

	var            shift, and enter state 28


State 15

	Exp -> ReadEnv .                                    (rule 19)

	'++'           reduce using rule 19
	PlusVar        reduce using rule 19
	'+'            reduce using rule 19
	')'            reduce using rule 19
	']'            reduce using rule 19
	';'            reduce using rule 19
	In             reduce using rule 19
	%eof           reduce using rule 19


State 16

	Exp -> Format . Exp                                 (rule 20)

	int            shift, and enter state 2
	string         shift, and enter state 5
	var            shift, and enter state 6
	Let            shift, and enter state 7
	Print          shift, and enter state 8
	Clear          shift, and enter state 9
	ClearAll       shift, and enter state 10
	'('            shift, and enter state 11
	'['            shift, and enter state 12
	ReadFile       shift, and enter state 13
	GetVars        shift, and enter state 14
	ReadEnv        shift, and enter state 15
	Format         shift, and enter state 16
	FillBasePrefixReadyshift, and enter state 17
	ProcSemicComma shift, and enter state 18
	Delimit        shift, and enter state 19
	Compare        shift, and enter state 20
	LiteralsNum    shift, and enter state 21

	Exp            goto state 27
	Str            goto state 4

State 17

	Exp -> FillBasePrefixReady . var                    (rule 21)

	var            shift, and enter state 26


State 18

	Exp -> ProcSemicComma . var                         (rule 22)

	var            shift, and enter state 25


State 19

	Exp -> Delimit . string Exp In var                  (rule 23)

	string         shift, and enter state 24


State 20

	Exp -> Compare . string var In string var           (rule 24)

	string         shift, and enter state 23


State 21

	Exp -> LiteralsNum . var                            (rule 25)

	var            shift, and enter state 22


State 22

	Exp -> LiteralsNum var .                            (rule 25)

	'++'           reduce using rule 25
	PlusVar        reduce using rule 25
	'+'            reduce using rule 25
	')'            reduce using rule 25
	']'            reduce using rule 25
	';'            reduce using rule 25
	In             reduce using rule 25
	%eof           reduce using rule 25


State 23

	Exp -> Compare string . var In string var           (rule 24)

	var            shift, and enter state 53


State 24

	Exp -> Delimit string . Exp In var                  (rule 23)

	int            shift, and enter state 2
	string         shift, and enter state 5
	var            shift, and enter state 6
	Let            shift, and enter state 7
	Print          shift, and enter state 8
	Clear          shift, and enter state 9
	ClearAll       shift, and enter state 10
	'('            shift, and enter state 11
	'['            shift, and enter state 12
	ReadFile       shift, and enter state 13
	GetVars        shift, and enter state 14
	ReadEnv        shift, and enter state 15
	Format         shift, and enter state 16
	FillBasePrefixReadyshift, and enter state 17
	ProcSemicComma shift, and enter state 18
	Delimit        shift, and enter state 19
	Compare        shift, and enter state 20
	LiteralsNum    shift, and enter state 21

	Exp            goto state 52
	Str            goto state 4

State 25

	Exp -> ProcSemicComma var .                         (rule 22)

	'++'           reduce using rule 22
	PlusVar        reduce using rule 22
	'+'            reduce using rule 22
	')'            reduce using rule 22
	']'            reduce using rule 22
	';'            reduce using rule 22
	In             reduce using rule 22
	%eof           reduce using rule 22


State 26

	Exp -> FillBasePrefixReady var .                    (rule 21)

	'++'           reduce using rule 21
	PlusVar        reduce using rule 21
	'+'            reduce using rule 21
	')'            reduce using rule 21
	']'            reduce using rule 21
	';'            reduce using rule 21
	In             reduce using rule 21
	%eof           reduce using rule 21


State 27

	Exp -> Exp . '++' Exp                               (rule 6)
	Exp -> Exp . PlusVar Exp                            (rule 8)
	Exp -> Exp . '+' Exp                                (rule 9)
	Exp -> Exp . ';' Exp                                (rule 14)
	Exp -> Exp . ';'                                    (rule 15)
	Exp -> Format Exp .                                 (rule 20)

	'++'           shift, and enter state 37
	PlusVar        shift, and enter state 38
	'+'            shift, and enter state 39
	')'            reduce using rule 20
	']'            reduce using rule 20
	';'            reduce using rule 20
	In             reduce using rule 20
	%eof           reduce using rule 20


State 28

	Exp -> GetVars var .                                (rule 18)

	'++'           reduce using rule 18
	PlusVar        reduce using rule 18
	'+'            reduce using rule 18
	')'            reduce using rule 18
	']'            reduce using rule 18
	';'            reduce using rule 18
	In             reduce using rule 18
	%eof           reduce using rule 18


State 29

	Exp -> ReadFile string .                            (rule 17)

	'++'           reduce using rule 17
	PlusVar        reduce using rule 17
	'+'            reduce using rule 17
	')'            reduce using rule 17
	']'            reduce using rule 17
	';'            reduce using rule 17
	In             reduce using rule 17
	%eof           reduce using rule 17


State 30

	Exp -> '[' Exp . ']'                                (rule 4)
	Exp -> Exp . '++' Exp                               (rule 6)
	Exp -> Exp . PlusVar Exp                            (rule 8)
	Exp -> Exp . '+' Exp                                (rule 9)
	Exp -> Exp . ';' Exp                                (rule 14)
	Exp -> Exp . ';'                                    (rule 15)

	'++'           shift, and enter state 37
	PlusVar        shift, and enter state 38
	'+'            shift, and enter state 39
	']'            shift, and enter state 51
	';'            shift, and enter state 40


State 31

	Exp -> Exp . '++' Exp                               (rule 6)
	Exp -> Exp . PlusVar Exp                            (rule 8)
	Exp -> Exp . '+' Exp                                (rule 9)
	Exp -> '(' Exp . ')'                                (rule 13)
	Exp -> Exp . ';' Exp                                (rule 14)
	Exp -> Exp . ';'                                    (rule 15)

	'++'           shift, and enter state 37
	PlusVar        shift, and enter state 38
	'+'            shift, and enter state 39
	')'            shift, and enter state 50
	';'            shift, and enter state 40


State 32

	Exp -> Clear '(' . var ':' Type ')'                 (rule 11)

	var            shift, and enter state 49


State 33

	Exp -> Exp . '++' Exp                               (rule 6)
	Exp -> Exp . PlusVar Exp                            (rule 8)
	Exp -> Exp . '+' Exp                                (rule 9)
	Exp -> Exp . ';' Exp                                (rule 14)
	Exp -> Exp . ';'                                    (rule 15)
	Exp -> Print Exp .                                  (rule 16)

	'++'           shift, and enter state 37
	PlusVar        shift, and enter state 38
	'+'            shift, and enter state 39
	')'            reduce using rule 16
	']'            reduce using rule 16
	';'            reduce using rule 16
	In             reduce using rule 16
	%eof           reduce using rule 16


State 34

	Exp -> Let '(' . var ':' Type ')' '=' Exp           (rule 10)

	var            shift, and enter state 48


State 35

	Exp -> Str 'SA++FE' . Str                           (rule 7)
	Str -> Str 'SA++FE' . Str                           (rule 26)

	string         shift, and enter state 46

	Str            goto state 47

State 36

	Exp -> Str '|' . Str                                (rule 5)
	Str -> Str '|' . Str                                (rule 27)

	string         shift, and enter state 46

	Str            goto state 45

State 37

	Exp -> Exp '++' . Exp                               (rule 6)

	int            shift, and enter state 2
	string         shift, and enter state 5
	var            shift, and enter state 6
	Let            shift, and enter state 7
	Print          shift, and enter state 8
	Clear          shift, and enter state 9
	ClearAll       shift, and enter state 10
	'('            shift, and enter state 11
	'['            shift, and enter state 12
	ReadFile       shift, and enter state 13
	GetVars        shift, and enter state 14
	ReadEnv        shift, and enter state 15
	Format         shift, and enter state 16
	FillBasePrefixReadyshift, and enter state 17
	ProcSemicComma shift, and enter state 18
	Delimit        shift, and enter state 19
	Compare        shift, and enter state 20
	LiteralsNum    shift, and enter state 21

	Exp            goto state 44
	Str            goto state 4

State 38

	Exp -> Exp PlusVar . Exp                            (rule 8)

	int            shift, and enter state 2
	string         shift, and enter state 5
	var            shift, and enter state 6
	Let            shift, and enter state 7
	Print          shift, and enter state 8
	Clear          shift, and enter state 9
	ClearAll       shift, and enter state 10
	'('            shift, and enter state 11
	'['            shift, and enter state 12
	ReadFile       shift, and enter state 13
	GetVars        shift, and enter state 14
	ReadEnv        shift, and enter state 15
	Format         shift, and enter state 16
	FillBasePrefixReadyshift, and enter state 17
	ProcSemicComma shift, and enter state 18
	Delimit        shift, and enter state 19
	Compare        shift, and enter state 20
	LiteralsNum    shift, and enter state 21

	Exp            goto state 43
	Str            goto state 4

State 39

	Exp -> Exp '+' . Exp                                (rule 9)

	int            shift, and enter state 2
	string         shift, and enter state 5
	var            shift, and enter state 6
	Let            shift, and enter state 7
	Print          shift, and enter state 8
	Clear          shift, and enter state 9
	ClearAll       shift, and enter state 10
	'('            shift, and enter state 11
	'['            shift, and enter state 12
	ReadFile       shift, and enter state 13
	GetVars        shift, and enter state 14
	ReadEnv        shift, and enter state 15
	Format         shift, and enter state 16
	FillBasePrefixReadyshift, and enter state 17
	ProcSemicComma shift, and enter state 18
	Delimit        shift, and enter state 19
	Compare        shift, and enter state 20
	LiteralsNum    shift, and enter state 21

	Exp            goto state 42
	Str            goto state 4

State 40

	Exp -> Exp ';' . Exp                                (rule 14)
	Exp -> Exp ';' .                                    (rule 15)

	int            shift, and enter state 2
	string         shift, and enter state 5
	'++'           reduce using rule 15
	PlusVar        reduce using rule 15
	'+'            reduce using rule 15
	var            shift, and enter state 6
	Let            shift, and enter state 7
	Print          shift, and enter state 8
	Clear          shift, and enter state 9
	ClearAll       shift, and enter state 10
	'('            shift, and enter state 11
	')'            reduce using rule 15
	'['            shift, and enter state 12
	']'            reduce using rule 15
	';'            reduce using rule 15
	ReadFile       shift, and enter state 13
	GetVars        shift, and enter state 14
	ReadEnv        shift, and enter state 15
	Format         shift, and enter state 16
	FillBasePrefixReadyshift, and enter state 17
	ProcSemicComma shift, and enter state 18
	Delimit        shift, and enter state 19
	Compare        shift, and enter state 20
	In             reduce using rule 15
	LiteralsNum    shift, and enter state 21
	%eof           reduce using rule 15

	Exp            goto state 41
	Str            goto state 4

State 41

	Exp -> Exp . '++' Exp                               (rule 6)
	Exp -> Exp . PlusVar Exp                            (rule 8)
	Exp -> Exp . '+' Exp                                (rule 9)
	Exp -> Exp . ';' Exp                                (rule 14)
	Exp -> Exp ';' Exp .                                (rule 14)
	Exp -> Exp . ';'                                    (rule 15)

	'++'           shift, and enter state 37
	PlusVar        shift, and enter state 38
	'+'            shift, and enter state 39
	')'            reduce using rule 14
	']'            reduce using rule 14
	';'            reduce using rule 14
	In             reduce using rule 14
	%eof           reduce using rule 14


State 42

	Exp -> Exp . '++' Exp                               (rule 6)
	Exp -> Exp . PlusVar Exp                            (rule 8)
	Exp -> Exp . '+' Exp                                (rule 9)
	Exp -> Exp '+' Exp .                                (rule 9)
	Exp -> Exp . ';' Exp                                (rule 14)
	Exp -> Exp . ';'                                    (rule 15)

	'++'           shift, and enter state 37
	PlusVar        shift, and enter state 38
	'+'            reduce using rule 9
	')'            reduce using rule 9
	']'            reduce using rule 9
	';'            reduce using rule 9
	In             reduce using rule 9
	%eof           reduce using rule 9


State 43

	Exp -> Exp . '++' Exp                               (rule 6)
	Exp -> Exp . PlusVar Exp                            (rule 8)
	Exp -> Exp PlusVar Exp .                            (rule 8)
	Exp -> Exp . '+' Exp                                (rule 9)
	Exp -> Exp . ';' Exp                                (rule 14)
	Exp -> Exp . ';'                                    (rule 15)

	'++'           reduce using rule 8
	PlusVar        reduce using rule 8
	'+'            reduce using rule 8
	')'            reduce using rule 8
	']'            reduce using rule 8
	';'            reduce using rule 8
	In             reduce using rule 8
	%eof           reduce using rule 8


State 44

	Exp -> Exp . '++' Exp                               (rule 6)
	Exp -> Exp '++' Exp .                               (rule 6)
	Exp -> Exp . PlusVar Exp                            (rule 8)
	Exp -> Exp . '+' Exp                                (rule 9)
	Exp -> Exp . ';' Exp                                (rule 14)
	Exp -> Exp . ';'                                    (rule 15)

	'++'           reduce using rule 6
	PlusVar        shift, and enter state 38
	'+'            reduce using rule 6
	')'            reduce using rule 6
	']'            reduce using rule 6
	';'            reduce using rule 6
	In             reduce using rule 6
	%eof           reduce using rule 6


State 45

	Exp -> Str '|' Str .                                (rule 5)
	Str -> Str . 'SA++FE' Str                           (rule 26)
	Str -> Str . '|' Str                                (rule 27)
	Str -> Str '|' Str .                                (rule 27)

	'++'           reduce using rule 5
	'SA++FE'       shift, and enter state 58
			(reduce using rule 27)

	PlusVar        reduce using rule 5
	'+'            reduce using rule 5
	')'            reduce using rule 5
	']'            reduce using rule 5
	'|'            shift, and enter state 59
			(reduce using rule 27)

	';'            reduce using rule 5
	In             reduce using rule 5
	%eof           reduce using rule 5


State 46

	Str -> string .                                     (rule 28)

	'++'           reduce using rule 28
	'SA++FE'       reduce using rule 28
	PlusVar        reduce using rule 28
	'+'            reduce using rule 28
	')'            reduce using rule 28
	']'            reduce using rule 28
	'|'            reduce using rule 28
	';'            reduce using rule 28
	In             reduce using rule 28
	%eof           reduce using rule 28


State 47

	Exp -> Str 'SA++FE' Str .                           (rule 7)
	Str -> Str . 'SA++FE' Str                           (rule 26)
	Str -> Str 'SA++FE' Str .                           (rule 26)
	Str -> Str . '|' Str                                (rule 27)

	'++'           reduce using rule 7
	'SA++FE'       shift, and enter state 58
			(reduce using rule 26)

	PlusVar        reduce using rule 7
	'+'            reduce using rule 7
	')'            reduce using rule 7
	']'            reduce using rule 7
	'|'            shift, and enter state 59
			(reduce using rule 26)

	';'            reduce using rule 7
	In             reduce using rule 7
	%eof           reduce using rule 7


State 48

	Exp -> Let '(' var . ':' Type ')' '=' Exp           (rule 10)

	':'            shift, and enter state 57


State 49

	Exp -> Clear '(' var . ':' Type ')'                 (rule 11)

	':'            shift, and enter state 56


State 50

	Exp -> '(' Exp ')' .                                (rule 13)

	'++'           reduce using rule 13
	PlusVar        reduce using rule 13
	'+'            reduce using rule 13
	')'            reduce using rule 13
	']'            reduce using rule 13
	';'            reduce using rule 13
	In             reduce using rule 13
	%eof           reduce using rule 13


State 51

	Exp -> '[' Exp ']' .                                (rule 4)

	'++'           reduce using rule 4
	PlusVar        reduce using rule 4
	'+'            reduce using rule 4
	')'            reduce using rule 4
	']'            reduce using rule 4
	';'            reduce using rule 4
	In             reduce using rule 4
	%eof           reduce using rule 4


State 52

	Exp -> Exp . '++' Exp                               (rule 6)
	Exp -> Exp . PlusVar Exp                            (rule 8)
	Exp -> Exp . '+' Exp                                (rule 9)
	Exp -> Exp . ';' Exp                                (rule 14)
	Exp -> Exp . ';'                                    (rule 15)
	Exp -> Delimit string Exp . In var                  (rule 23)

	'++'           shift, and enter state 37
	PlusVar        shift, and enter state 38
	'+'            shift, and enter state 39
	';'            shift, and enter state 40
	In             shift, and enter state 55


State 53

	Exp -> Compare string var . In string var           (rule 24)

	In             shift, and enter state 54


State 54

	Exp -> Compare string var In . string var           (rule 24)

	string         shift, and enter state 67


State 55

	Exp -> Delimit string Exp In . var                  (rule 23)

	var            shift, and enter state 66


State 56

	Exp -> Clear '(' var ':' . Type ')'                 (rule 11)

	Int            shift, and enter state 63
	String         shift, and enter state 64

	Type           goto state 65

State 57

	Exp -> Let '(' var ':' . Type ')' '=' Exp           (rule 10)

	Int            shift, and enter state 63
	String         shift, and enter state 64

	Type           goto state 62

State 58

	Str -> Str 'SA++FE' . Str                           (rule 26)

	string         shift, and enter state 46

	Str            goto state 61

State 59

	Str -> Str '|' . Str                                (rule 27)

	string         shift, and enter state 46

	Str            goto state 60

State 60

	Str -> Str . 'SA++FE' Str                           (rule 26)
	Str -> Str . '|' Str                                (rule 27)
	Str -> Str '|' Str .                                (rule 27)

	'++'           reduce using rule 27
	'SA++FE'       shift, and enter state 58
			(reduce using rule 27)

	PlusVar        reduce using rule 27
	'+'            reduce using rule 27
	')'            reduce using rule 27
	']'            reduce using rule 27
	'|'            shift, and enter state 59
			(reduce using rule 27)

	';'            reduce using rule 27
	In             reduce using rule 27
	%eof           reduce using rule 27


State 61

	Str -> Str . 'SA++FE' Str                           (rule 26)
	Str -> Str 'SA++FE' Str .                           (rule 26)
	Str -> Str . '|' Str                                (rule 27)

	'++'           reduce using rule 26
	'SA++FE'       shift, and enter state 58
			(reduce using rule 26)

	PlusVar        reduce using rule 26
	'+'            reduce using rule 26
	')'            reduce using rule 26
	']'            reduce using rule 26
	'|'            shift, and enter state 59
			(reduce using rule 26)

	';'            reduce using rule 26
	In             reduce using rule 26
	%eof           reduce using rule 26


State 62

	Exp -> Let '(' var ':' Type . ')' '=' Exp           (rule 10)

	')'            shift, and enter state 70


State 63

	Type -> Int .                                       (rule 29)

	')'            reduce using rule 29


State 64

	Type -> String .                                    (rule 30)

	')'            reduce using rule 30


State 65

	Exp -> Clear '(' var ':' Type . ')'                 (rule 11)

	')'            shift, and enter state 69


State 66

	Exp -> Delimit string Exp In var .                  (rule 23)

	'++'           reduce using rule 23
	PlusVar        reduce using rule 23
	'+'            reduce using rule 23
	')'            reduce using rule 23
	']'            reduce using rule 23
	';'            reduce using rule 23
	In             reduce using rule 23
	%eof           reduce using rule 23


State 67

	Exp -> Compare string var In string . var           (rule 24)

	var            shift, and enter state 68


State 68

	Exp -> Compare string var In string var .           (rule 24)

	'++'           reduce using rule 24
	PlusVar        reduce using rule 24
	'+'            reduce using rule 24
	')'            reduce using rule 24
	']'            reduce using rule 24
	';'            reduce using rule 24
	In             reduce using rule 24
	%eof           reduce using rule 24


State 69

	Exp -> Clear '(' var ':' Type ')' .                 (rule 11)

	'++'           reduce using rule 11
	PlusVar        reduce using rule 11
	'+'            reduce using rule 11
	')'            reduce using rule 11
	']'            reduce using rule 11
	';'            reduce using rule 11
	In             reduce using rule 11
	%eof           reduce using rule 11


State 70

	Exp -> Let '(' var ':' Type ')' . '=' Exp           (rule 10)

	'='            shift, and enter state 71


State 71

	Exp -> Let '(' var ':' Type ')' '=' . Exp           (rule 10)

	int            shift, and enter state 2
	string         shift, and enter state 5
	var            shift, and enter state 6
	Let            shift, and enter state 7
	Print          shift, and enter state 8
	Clear          shift, and enter state 9
	ClearAll       shift, and enter state 10
	'('            shift, and enter state 11
	'['            shift, and enter state 12
	ReadFile       shift, and enter state 13
	GetVars        shift, and enter state 14
	ReadEnv        shift, and enter state 15
	Format         shift, and enter state 16
	FillBasePrefixReadyshift, and enter state 17
	ProcSemicComma shift, and enter state 18
	Delimit        shift, and enter state 19
	Compare        shift, and enter state 20
	LiteralsNum    shift, and enter state 21

	Exp            goto state 72
	Str            goto state 4

State 72

	Exp -> Exp . '++' Exp                               (rule 6)
	Exp -> Exp . PlusVar Exp                            (rule 8)
	Exp -> Exp . '+' Exp                                (rule 9)
	Exp -> Let '(' var ':' Type ')' '=' Exp .           (rule 10)
	Exp -> Exp . ';' Exp                                (rule 14)
	Exp -> Exp . ';'                                    (rule 15)

	'++'           shift, and enter state 37
	PlusVar        shift, and enter state 38
	'+'            shift, and enter state 39
	')'            reduce using rule 10
	']'            reduce using rule 10
	';'            reduce using rule 10
	In             reduce using rule 10
	%eof           reduce using rule 10


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 31
Number of terminals: 31
Number of non-terminals: 4
Number of states: 73
